tests/baselines/reference/stringLiteralTypesAsTypeParameterConstraint02.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesAsTypeParameterConstraint02.ts(6,13): error TS2345: Argument of type '(y: "foo" | "bar") => "foo" | "bar"' is not assignable to parameter of type '(x: "foo") => "foo"'.
  Type '"foo" | "bar"' is not assignable to type '"foo"'.
    Type '"bar"' is not assignable to type '"foo"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesAsTypeParameterConstraint02.ts (1 errors) ====
    
    function foo<T extends "foo">(f: (x: T) => T) {
        return f;
    }
    
    let f = foo((y: "foo" | "bar") => y === "foo" ? y : "foo");
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(y: "foo" | "bar") => "foo" | "bar"' is not assignable to parameter of type '(x: "foo") => "foo"'.
!!! error TS2345:   Type '"foo" | "bar"' is not assignable to type '"foo"'.
!!! error TS2345:     Type '"bar"' is not assignable to type '"foo"'.
    let fResult = f("foo");